--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -30,7 +30,7 @@
             </div>
           
           <div class="grid-row">
-            <div class="grid-row__col grid-row__col--12" style="padding-left: 10px;">
+            <div class="grid-row__col no-buff">
               <ul class="type-list">
                 <li class="type-item"
                   [ngClass]="{'selected': typeSelected === 'mst'}"
@@ -205,7 +205,7 @@
       </section>
       <footer>
         <div class="grid-row">
-          <div class="grid-row__col grid-row__col--12">
+          <div class="grid-row__col">
               <div class="forms__btn-container">
                 <button
                   class="btn btn-previous btn-left"
