--- a/front-end/src/app/forms/form-99/f99/f99.component.scss
+++ b/front-end/src/app/forms/form-99/f99/f99.component.scss
@@ -55,48 +55,23 @@
     display: block;
     margin: 0 auto;
     width: 100%;
+    margin-bottom: 1em;
     @include clearfix();
   }
   .form__container {
     display: table-cell;
     min-height: 100vh;
+    width: 100%;
+    padding: 0 1em;
     &.show-alerts {
       padding-left: 0;
       @include media(tablet) {
         padding-left: 0;
       }
-      @include media(mediumDesktop) {
-        margin-left: 5px;
-        width: 80%;
-      }
-      @include media(largeDesktop) {
-        margin-left: 5px;
-        width: 86%;
-      }
     }
     &.hide-alerts {
+      min-height: 100vh;
       width: 100%;
-      @include media(tablet) {
-        width: 100%;
-      }
-      @include media(mediumDesktop) {
-        width: 100%;
-      }
-      @include media(largeDesktop) {
-        width: 100%;
-      }
-    }
-    @include media(tablet) {
-      min-height: 100vh;
-      width: 99%;
-    }
-    @include media(mediumDesktop) {
-      min-height: 100vh;
-      width: 900px;
-    }
-    @include media(largeDesktop) {
-      min-height: 100vh;
-      width: 1060px;
     }
     .form__content {
       height: 100%;
@@ -119,17 +94,8 @@
         width: 98%;
       }
       .form__step {
-        padding-left: 0;
         width: 100%;
-        @include media(tablet) {
-          padding-left: 0;
-        }
-        @include media(mediumDesktop) {
-          padding-left: 5px;
-        }
-        @include media(largeDesktop) {
-          padding-left: 5px;
-        }
+        padding-left: 1em;
       }
     }
     @include clearfix();
