--- a/front-end/src/app/shared/partials/preview/preview.component.scss
+++ b/front-end/src/app/shared/partials/preview/preview.component.scss
@@ -16,7 +16,9 @@
 	header {    
 	    .header-container {
 	      display: block;
-	      width: 100%;
+				width: 100%;
+				border-bottom: 1px solid $bombay;
+      	padding-bottom: .75em;
 	      .header__text {
 	        display: block;
 	        float: none;
@@ -36,32 +38,7 @@
 	        }         
 	      }
 	      .header__btns {
-	        display: block;
-	        float: none;
-	        padding-top: 0;
-	        text-align: left;
-	        width: 100%;
-	        @include media(tablet) {
-	          display: block;
-	          float: none;
-	          padding-top: 0;
-	          text-align: left;
-	          width: 100%;
-	        }
-	        @include media(mediumDesktop) {
-	          float: left;
-	          margin-bottom: 10px;
-	          padding-top: 0;
-	          text-align: right;
-	          width: 50%;
-	        }         
-	        @include media(largeDesktop) {
-	          float: left;
-	          margin-bottom: 10px;
-	          padding-top: 0;
-	          text-align: right;
-	          width: 50%;
-	        }         
+	        float: right;    
 	        .btn-print-preview {
 	          @extend .btn-secondary-gray;
 	          margin-right: 5px;
@@ -172,18 +149,7 @@ footer {
 		    .forms__btn-container {
 		      margin: 0 auto;
 		      padding: 0;
-		      width: 80%;
-		      @include media(tablet) {
-		        margin: 0;
-		        padding: 0;
-		        width: 95%;
-		      }
-		      @include media(mediumDesktop) {
-		        width: 95%;
-		      }         
-		      @include media(largeDesktop) {
-		        width: 95%;
-		      }	
+		      width: 100%;
 		    }		
 		}
 	}
