FNE1005 transaction-sidebar.component.html added inline style padding, code review item discussion*

--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -36,9 +36,9 @@
            {{ categoryType?.text }}
           </button>
         </div>
-        <div class="float-right amount">
-          $0
-        </div>
+        <span class="float-right amount" style="padding:.75em">
+          $0.00
+        </span>
       </li>
     </ul>
   </section>
