--- a/front-end/src/app/app-layout/app-layout.component.scss
+++ b/front-end/src/app/app-layout/app-layout.component.scss
@@ -279,7 +279,8 @@
         @include media(largeDesktop) {
           display: inline-block;
         }
-        padding-right: 10px;
+        padding-right: 100px;
+        padding-left: 10px;
         &:last-child {
           padding-right: 0;
         }
@@ -301,6 +302,7 @@
     .legal-disclaimer {
       float: left;
       text-align: right;
+      padding-right: 20px;
       width: $footerLegalDisclaimerWidth;
       .btn-link {
         color: $pictonBlue;
