FNE-858 dropdown-list items view/print

--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -22,9 +22,8 @@
             <span class="sr-only">Click for more options</span>
           </button>
           <div ngbDropdownMenu aria-labelledby="actionsMenu">
-            <button class="dropdown-item">View</button>
-            <button class="dropdown-item">Print</button>
-            <button class="dropdown-item">Import</button>
+            <button class="dropdown-item"><i class="view-icon"></i> View</button>
+            <button class="dropdown-item"><i class="print-icon"></i> Print</button>
           </div>
         </div>
       </div>
