F99 - Form screen, signee screen- Information icon alignment

--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -57,7 +57,7 @@
                  Signee*
                  <button
                    type="button"
-                   class="btn btn-info"
+                   class="btn"
                    [ngbTooltip]="tipContent"
                    #t2="ngbTooltip"
                    (click)="toggleToolTip(t2)"
