Update to reason screen

--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -266,6 +266,7 @@
                 role="textarea"
                 (input)="editorChange($event)"
                 (paste)="removeHTML($event)"
+                #htmlEditor
               ></div>
             </div>
           </div>
