--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -19,7 +19,7 @@
           </div>
         </div>
       </header>
-      <section style="margin-bottom: 1em;">
+      <section>
         <div class="content">
           
             <div class="grid-row__col grid-row__col--12">
@@ -30,7 +30,7 @@
             </div>
           
           <div class="grid-row">
-            <div class="grid-row__col no-buff">
+            <div class="grid-row__col no-buff space-bottom">
               <ul class="type-list">
                 <li class="type-item"
                   [ngClass]="{'selected': typeSelected === 'mst'}"
