--- a/front-end/src/app/shared/partials/sign/sign.component.scss
+++ b/front-end/src/app/shared/partials/sign/sign.component.scss
@@ -36,6 +36,7 @@
       width: 100%;
       border-bottom: 1px solid $bombay;
       padding-bottom: .75em;
+      margin-bottom: 1em;
       .header__text {
         display: block;
         float: none;
