--- a/front-end/src/app/shared/partials/preview/preview.component.html
+++ b/front-end/src/app/shared/partials/preview/preview.component.html
@@ -177,7 +177,7 @@
   </section>
   <footer>
     <div class="grid-row">
-      <div class="grid-row__col grid-row__col--12 text-center">
+      <div class="grid-row__col grid-row__col--12 border-top space-bottom">
         <div class="forms__btn-container">
           <button
             type="button"
