--- a/front-end/src/app/shared/scss/classes/_btn.scss
+++ b/front-end/src/app/shared/scss/classes/_btn.scss
@@ -54,7 +54,7 @@
   box-shadow: none;
   overflow: hidden;
   outline: none;
-  padding-bottom: 0;
+  padding: 0 0 0 .25em;
   &:hover,
   &:active,
   &:focus {
