Fne 993 sprint12 mahendra (#470)
* F99 json builder fixes

F99 json builder fixes

* FNE 944 changes

FNE 944 changes

* FNE 944 changes

FNE 944 changes

* FNE 944 changes

<div class="form-sidebar">
  <header>
    <h3 class="text-center transactions__filter-header">{{ title }}</h3>
  </header>
  <section>
    <div class="transactions__filter-sidebar-set">
       
          <div class="card">
              <div class="card-header transactions__filter-title" (click)="toggleFormFilterItem()">
                Form
                <i class="float-right" aria-hidden="true" 
                  [ngClass]="toggleFilterDirection(isHideFormFilter)">
                </i>          
              </div>
              <div class="card-body" [@openCloseScroll]="determineScrollState(isHideFormFilter)">
                <div class="transactions__filter-type-list-body">
                  <ul class="transactions__filter-type-list">
                    <li *ngFor="let form of forms">
                      <div class="form-check">
                        <input class="form-check-input" type="checkbox" id="{{ form?.form_type }}" 
                          [(ngModel)]="form.selected">
                        <label class="form-check-label" for="{{ form?.form_type }}">
                          {{ form?.form_type }}</label>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>

            <div class="card">
                <div class="card-header transactions__filter-title" (click)="toggleStatusFilterItem()">
                  Status
                  <i class="float-right" aria-hidden="true" 
                    [ngClass]="toggleFilterDirection(isHideStatusFilter)">
                  </i>          
                </div>
                <div class="card-body" [@openCloseScroll]="determineScrollState(isHideStatusFilter)">
                  <div class="

--- a/front-end/src/app/reports/reportsidebar/reportsidebar.component.html
+++ b/front-end/src/app/reports/reportsidebar/reportsidebar.component.html
@@ -95,10 +95,10 @@
             <input
               type="date"
               name="txtfromdate"
-              [(ngModel)]="filterDateFrom"
+              [(ngModel)]="filterCvgDateFrom"
               class="form-control"
               id="filter-date-from"
-              aria-label="Filter From Date"
+              aria-label="Filter Coverage From Date"
               aria-describedby="filter-from-date"
             >                        
           </div>
@@ -112,10 +112,10 @@
             <input
               type="date"
               name="txttodate"
-              [(ngModel)]="filterDateTo"
+              [(ngModel)]="filterCvgDateTo"
               class="form-control"
               id="filter-date-to"
-              aria-label="Filter To Date"
+              aria-label="Filter Coverage To Date"
               aria-describedby="filter-to-date"
             >                        
           </div>          
@@ -166,10 +166,10 @@
             <input
               type="date"
               name="txtFromDelDate"
-              [(ngModel)]="filterDeletedDateFrom"
+              [(ngModel)]="filterFiledDateFrom"
               class="form-control"
               id="filter-filed-date-from"
-              aria-label="Filter From Delete Date"
+              aria-label="Filter From Filed/Saved Date"
               aria-describedby="filter-from-filed-date"
             >                        
           </div>
@@ -183,10 +183,10 @@
             <input
               type="date"
               name="txtToDelDate"
-              [(ngModel)]="filterDeletedDateTo"
+              [(ngModel)]="filterFiledDateTo"
               class="form-control"
               id="filter-filed-date-to"
-              aria-label="Filter To Delete Date"
+              aria-label="Filter To Filed/Saved Date"
               aria-describedby="filter-to-filed-date"
             >                        
           </div>          
