Fne 993 sprint12 mahendra (#471)
* F99 json builder fixes

F99 json builder fixes

* FNE 944 changes

FNE 944 changes

* FNE 944 changes

FNE 944 changes

* FNE 944 changes

<div class="form-sidebar">
  <header>
    <h3 class="text-center transactions__filter-header">{{ title }}</h3>
  </header>
  <section>
    <div class="transactions__filter-sidebar-set">
       
          <div class="card">
              <div class="card-header transactions__filter-title" (click)="toggleFormFilterItem()">
                Form
                <i class="float-right" aria-hidden="true" 
                  [ngClass]="toggleFilterDirection(isHideFormFilter)">
                </i>          
              </div>
              <div class="card-body" [@openCloseScroll]="determineScrollState(isHideFormFilter)">
                <div class="transactions__filter-type-list-body">
                  <ul class="transactions__filter-type-list">
                    <li *ngFor="let form of forms">
                      <div class="form-check">
                        <input class="form-check-input" type="checkbox" id="{{ form?.form_type }}" 
                          [(ngModel)]="form.selected">
                        <label class="form-check-label" for="{{ form?.form_type }}">
                          {{ form?.form_type }}</label>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>

            <div class="card">
                <div class="card-header transactions__filter-title" (click)="toggleStatusFilterItem()">
                  Status
                  <i class="float-right" aria-hidden="true" 
                    [ngClass]="toggleFilterDirection(isHideStatusFilter)">
                  </i>          
                </div>
                <div class="card-body" [@openCloseScroll]="determineScrollState(isHideStatusFilter)">
                  <div class="

--- a/front-end/src/app/reports/reportheader/reportheader.component.html
+++ b/front-end/src/app/reports/reportheader/reportheader.component.html
@@ -1,6 +1,6 @@
-<div class="forms__wizard" >
- 
-  <div class="form__sidebar" *ngIf="showSideBar">
+<!--<div class="forms__wizard" > -->
+<div class="transactions__main-container" >  
+  <div class="transactions__sidebar" *ngIf="showSideBar">
      <app-reportsidebar
           title="Filter Options"
           (status)='onNotify($event)'
@@ -8,8 +8,9 @@
      >
       </app-reportsidebar>
   </div>
- 
-  <div class="form__container">
+
+  <!--<div class="form__container"></div>-->
+  <div class="transactions__container">
       <div class="form__content" >
         <div class="card pl-3 pr-3">
                    <h1 class="pb-3 pt-3 border-bottom"><B>Reports</B>
