--- a/front-end/src/app/reports/reportheader/reportheader.component.scss
+++ b/front-end/src/app/reports/reportheader/reportheader.component.scss
@@ -149,3 +149,94 @@
     background-color:$blueZodiac;
   }
 }
+
+.transactions__main-container {
+  display: table;
+  table-layout: fixed;
+  min-height: $mainContentHeight;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  .transactions__sidebar {
+    background-color: $bombay;
+    flex-grow: 1;
+    display: none;
+    padding-left: 0;
+    vertical-align: top;
+    padding-top: 1.5em;
+    @include media(tablet) {
+      display: none;
+    }
+    @include media(mediumDesktop) {
+      display: table-cell;
+      width: 20%;
+    }
+    @include media(largeDesktop) {
+      display: table-cell;
+      width: 20%;
+    }           
+  }
+
+  .transactions__container {
+    .grid-row {
+      margin-left: 0;
+      margin-right: 0;
+      .grid-row__col {
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
+
+    header {
+      .header-content {
+        display: block;
+        margin: 0 auto;
+        width: 96%;
+        padding: .75em 0 .25em 0;
+        @include clearfix();
+        .btn-options {
+          color: $shuttleGray;
+          text-decoration: none;
+          &:hover,
+          &:visited,
+          &:active {
+            color: $shuttleGray;
+            text-decoration: none;
+          }
+        }
+      }
+    }
+
+    .transactions__btn-container {
+      height: 100%;
+      padding: 1em;
+    }
+
+    .transactions__btn-search-filter {
+      margin: 0 3px;
+      background-color: $shuttleGray;
+      color: $white;
+    }
+
+    .transactions__btn-search-filter-join {
+      float: left;
+      padding: 10px 2px 0 2px;
+    }
+
+    .transactions__trx-btn {
+      margin: 5px;
+      width: 10em;
+    }
+
+    .transactions__trx-search {
+      width: 27%;
+      float: right;
+      margin-right: 5px;
+    }
+
+    .transactions__trx-applied-filter-row {
+      min-height: 48px;
+    }
+
+  }
+}
