Fne 993 sprint12 mahendra (#474)
* F99 json builder fixes

F99 json builder fixes

* FNE 944 changes

FNE 944 changes

* FNE 944 changes

FNE 944 changes

* FNE 944 changes

<div class="form-sidebar">
  <header>
    <h3 class="text-center transactions__filter-header">{{ title }}</h3>
  </header>
  <section>
    <div class="transactions__filter-sidebar-set">
       
          <div class="card">
              <div class="card-header transactions__filter-title" (click)="toggleFormFilterItem()">
                Form
                <i class="float-right" aria-hidden="true" 
                  [ngClass]="toggleFilterDirection(isHideFormFilter)">
                </i>          
              </div>
              <div class="card-body" [@openCloseScroll]="determineScrollState(isHideFormFilter)">
                <div class="transactions__filter-type-list-body">
                  <ul class="transactions__filter-type-list">
                    <li *ngFor="let form of forms">
                      <div class="form-check">
                        <input class="form-check-input" type="checkbox" id="{{ form?.form_type }}" 
                          [(ngModel)]="form.selected">
                        <label class="form-check-label" for="{{ form?.form_type }}">
                          {{ form?.form_type }}</label>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>

            <div class="card">
                <div class="card-header transactions__filter-title" (click)="toggleStatusFilterItem()">
                  Status
                  <i class="float-right" aria-hidden="true" 
                    [ngClass]="toggleFilterDirection(isHideStatusFilter)">
                  </i>          
                </div>
                <div class="card-body" [@openCloseScroll]="determineScrollState(isHideStatusFilter)">
                  <div class="

--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -326,13 +326,14 @@
                 <div class="grid-row__col grid-row__col--12">
                   <h5>
                     {{ file.name }}
-                    <button type="button" class="btn btn-link" (click)="open(deletePDF)">
-                      <span vertical-align="top" class="close-icon"></span>
+                    <!--<button type="button" class="btn btn-link" (click)="open(deletePDF)">-->
+                    <button type="button" class="btn btn-link" (click)="deletePDFFile()">
+                    <span vertical-align="top" class="close-icon"></span>
                     </button>
                   </h5>
                 </div>
 
-                <ng-template #deletePDF let-d="dismiss">
+               <!--<ng-template #deletePDF let-d="dismiss">
                   <div class="modal-header">
                     <h2 class="modal-title">
                       Delete PDF file
@@ -342,11 +343,12 @@
                     <p>Do you want to delete uploaded pdf file?</p>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-dark" (click)="d('Yes click')">Yes</button> &nbsp;
+                    <button type="button" class="btn btn-secondary" (click)="d('OK click')">OK</button> &nbsp;
 
-                    <button type="button" class="btn btn-outline-dark" (click)="d('No click')">No</button> &nbsp;
+                    <button type="button" class="btn btn-secondary-gray" (click)="d('Cancel click')">Cancel</button> &nbsp;
                   </div>
-                </ng-template>
+                </ng-template>--> 
+
               </div>
             </div>
           </div>
