Fne 993 sprint12 mahendra (#480)
* F99 json builder fixes

F99 json builder fixes

* FNE 944 changes

FNE 944 changes

* FNE 944 changes

FNE 944 changes

* FNE 944 changes

<div class="form-sidebar">
  <header>
    <h3 class="text-center transactions__filter-header">{{ title }}</h3>
  </header>
  <section>
    <div class="transactions__filter-sidebar-set">
       
          <div class="card">
              <div class="card-header transactions__filter-title" (click)="toggleFormFilterItem()">
                Form
                <i class="float-right" aria-hidden="true" 
                  [ngClass]="toggleFilterDirection(isHideFormFilter)">
                </i>          
              </div>
              <div class="card-body" [@openCloseScroll]="determineScrollState(isHideFormFilter)">
                <div class="transactions__filter-type-list-body">
                  <ul class="transactions__filter-type-list">
                    <li *ngFor="let form of forms">
                      <div class="form-check">
                        <input class="form-check-input" type="checkbox" id="{{ form?.form_type }}" 
                          [(ngModel)]="form.selected">
                        <label class="form-check-label" for="{{ form?.form_type }}">
                          {{ form?.form_type }}</label>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>

            <div class="card">
                <div class="card-header transactions__filter-title" (click)="toggleStatusFilterItem()">
                  Status
                  <i class="float-right" aria-hidden="true" 
                    [ngClass]="toggleFilterDirection(isHideStatusFilter)">
                  </i>          
                </div>
                <div class="card-body" [@openCloseScroll]="determineScrollState(isHideStatusFilter)">
                  <div class="

--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -11,7 +11,8 @@
             <h1>Transaction Type</h1>
           </ng-container>
         </div>
-        <div class="float-right" ngbDropdown>
+        <!--<div class="float-right" ngbDropdown>-->
+        <div class="float-right"   ngbDropdown role="group" aria-label="Action dropdown">
           <button
             type="button"
             class="btn btn-link btn-options"
@@ -24,8 +25,10 @@
           <div ngbDropdownMenu aria-labelledby="actionsMenu">
             <button class="dropdown-item"><i class="view-icon"></i> View</button>
             <button class="dropdown-item"><i class="print-icon"></i> Print</button>
+            <button class="dropdown-item"><i class="far fa-file-import"></i> Import</button>            
           </div>
         </div>
+        
       </div>
       <ng-container *ngIf="transactionCategorySelected">
         <hr />
