--- a/front-end/src/app/dashboard/dashboard.component.html
+++ b/front-end/src/app/dashboard/dashboard.component.html
@@ -42,9 +42,7 @@
                 <td>10/14/2018</td>
                 <td>
                   <div class="btn-group float-right" role="group" aria-label="action buttons">
-                    <button type="button" class="btn btn-sm btn-secondary"><i class="fas fa-eye"></i></button>
-                    <button type="button" class="btn btn-sm btn-secondary"><i class="fas fa-edit"></i></button>
-                    <button type="button" class="btn btn-sm btn-secondary"><i class="fas fa-trash-alt"></i></button>
+                      <button type="button" class= "btn btn-sm btn-primary"> <i class="fas fa-ellipsis-h"></i> </button> 
                   </div>
                 </td>
               </tr>
@@ -54,9 +52,8 @@
                 <td>07/14/2018</td>
                 <td>
                   <div class="btn-group float-right" role="group" aria-label="action buttons">
-                    <button type="button" class="btn btn-sm btn-secondary"><i class="fas fa-eye"></i></button>
-                    <button type="button" class="btn btn-sm btn-secondary"><i class="fas fa-edit"></i></button>
-                  </div>
+                      <button type="button" class= "btn btn-sm btn-primary"> <i class="fas fa-ellipsis-h"></i> </button> 
+                    </div>
                 </td>
               </tr>
               <tr>
@@ -65,8 +62,7 @@
                 <td>04/20/2018</td>
                 <td>
                   <div class="btn-group float-right" role="group" aria-label="action buttons">
-                    <button type="button" class="btn btn-sm btn-secondary"><i class="fas fa-eye"></i></button>
-                    <button type="button" class="btn btn-sm btn-secondary"><i class="fas fa-edit"></i></button>
+                      <button type="button" class= "btn btn-sm btn-primary"> <i class="fas fa-ellipsis-h"></i> </button> 
                   </div>
                 </td>
               </tr>
@@ -76,10 +72,8 @@
                 <td>09/15/2018</td>
                 <td>
                   <div class="btn-group float-right" role="group" aria-label="action buttons">
-                    <button type="button" class="btn btn-sm btn-secondary"><i class="fas fa-eye"></i></button>
-                    <button type="button" class="btn btn-sm btn-secondary"><i class="fas fa-edit"></i></button>
-                    <button type="button" class="btn btn-sm btn-secondary"><i class="fas fa-trash-alt"></i></button>
-                  </div>
+                      <button type="button" class= "btn btn-sm btn-primary"> <i class="fas fa-ellipsis-h"></i> </button> 
+                   </div>
                 </td>
               </tr>
             </tbody>
