--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -13,7 +13,8 @@
             </ng-container>
           </h1>
         </div>
-        <div class="float-right" ngbDropdown>
+
+       <!-- <div class="float-right" ngbDropdown>
           <button
             type="button"
             class="btn btn-link btn-options"
@@ -24,6 +25,22 @@
             <span class="sr-only">Click for more options</span>
           </button>
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button class="dropdown-item"><i class="view-icon"></i> View</button>
+            <button class="dropdown-item"><i class="print-icon"></i> Print</button>
+          </div>
+        </div>-->
+
+       <div class="float-right"   ngbDropdown role="group" aria-label="Action dropdown">
+          <button
+            type="button"
+            class="btn btn-link btn-options"
+            id="actionsMenu"
+            ngbDropdownToggle
+          >
+            <span class="ellipsis-icon" aria-hidden="true"></span>
+            <span class="sr-only">Click for more options</span>
+          </button>
+          <div ngbDropdownMenu aria-labelledby="actionsMenu">
             <button class="dropdown-item"><i class="view-icon"></i> View</button>
             <button class="dropdown-item"><i class="print-icon"></i> Print</button>
           </div>
